--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -14,6 +14,7 @@ $lavender: #7287fd;
 $teal: #179299;
 $pink: #ea76cb;
 $text: #4c4f69;
+$text-light: #6c6f89;
 $text-highlight: #eff1f5;
 $gray: #ccd0da;
 $blue-filter: invert(49%) sepia(38%) saturate(4860%) hue-rotate(208deg) brightness(105%) contrast(101%);
