--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,9 +19,7 @@ import '../sass/home.scss';
   <div class="text">
     <p>> new? read the <ILink href="blog/foreword">foreword</ILink></p>
     <p>
-      > latest essay: <MDLink extraPretty href="https://bencuan.substack.com/p/the-future-of-bay-area-transit"
-        >the future of bay area transit</MDLink
-      >
+      > latest essay: <MDLink extraPretty href="https://bencuan.me/blog/transit">the future of bay area transit</MDLink>
     </p>
     <p>> see what i'm <ILink href="projects">currently up to...</ILink></p>
     <p><Visitors client:idle /></p>
