--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,10 @@ import Visitors from '../components/visitors.tsx';
 import Button from '../components/button.tsx';
 import { ILink, MDLink, XLink } from '../components/links.tsx';
 import '../sass/home.scss';
+import Doomscroll from '../components/doomscroll';
+import '../sass/doomscroll.scss';
+
+import recommendations from '../recommendations.json';
 ---
 
 <Layout title="bencuan's website" description="welcome to my website!" currPage="home">
@@ -23,5 +27,9 @@ import '../sass/home.scss';
     </p>
     <p>> see what i'm <ILink href="projects">currently up to...</ILink></p>
     <p><Visitors client:idle /></p>
+    <p><b>keep scrolling for recs~</b></p>
+    <p>the doomscroller is currently under construction. please pardon the dust 🏗️</p>
   </div>
+
+  <Doomscroll client:idle recommendations={recommendations} />
 </Layout>
