--- a/src/pages/[...root].astro
+++ b/src/pages/[...root].astro
@@ -4,6 +4,7 @@ import Layout from '../components/layout.astro';
 import { MDLink } from '../components/links.tsx';
 import '../sass/blog.scss';
 import '../sass/links.scss';
+import '../sass/root.scss';
 
 export const prerender = true;
 export async function getStaticPaths() {
