homepage and content update

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,7 +16,7 @@ const items = collection.map(item => ({ ...item.data, slug: '/blog/' + item.slug
   <SearchSortFilter
     sortCategories={['title', 'date']}
     items={items}
-    itemCategories={['history', 'travel', 'philosophy', 'experiments']}
+    itemCategories={['history', 'travel', 'philosophy', 'tech', 'experiments']}
     type="blog"
     defaultSort={{ category: 'date', state: 'desc' }}
     client:load
