--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,35 +6,21 @@ import Visitors from '../components/visitors.tsx';
 import Button from '../components/button.tsx';
 import { ILink, MDLink, XLink } from '../components/links.tsx';
 import '../sass/home.scss';
-import '../sass/doomscroll.scss';
+// import '../sass/doomscroll.scss';
+import IndexContent from './_index-content.mdx';
 ---
 
 <Layout title="bencuan's website" description="welcome to my website!" currPage="home">
   <h1 class="name">ben cuan</h1>
-  <p class="splash">welcome to my internet home!</p>
+  <!-- <p class="splash">welcome to my internet home!</p> -->
   <div class="home-buttons">
     <Button href="/rss.xml"><FontAwesomeIcon icon={faRss} /> rss</Button>
     <Button href="https://bencuan.substack.com"><FontAwesomeIcon icon={faNewspaper} /> newsletter</Button>
   </div>
 
   <div class="text">
-    <p>
-      > latest essay: <ILink href="blog/transit">the future of bay area transit</ILink>
-    </p>
-    <p>
-      > weekly musings every wednesday @ 9am on <MDLink extraPretty href="https://bencuan.substack.com">substack</MDLink
-      >
-    </p>
-    <p><Visitors client:idle /></p>
-    <!-- <p><b>keep scrolling for recs~</b></p>
-    <p>
-      the <MDLink
-        extraPretty
-        href="https://open.substack.com/pub/bencuan/p/s2w4-my-website-now-has-doomscroll?r=3axqei&utm_campaign=post&utm_medium=web&showWelcomeOnShare=true"
-        >doomscroller</MDLink
-      > is currently under construction. please pardon the dust 🏗️
-    </p> -->
-  </div>
+    <!-- <p><Visitors client:idle /></p> -->
 
-  <!-- <Doomscroll client:idle recommendations={recommendations} /> -->
+    <IndexContent />
+  </div>
 </Layout>
