--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -3,7 +3,7 @@
 @use 'mixins';
 
 header {
-  font-family: fonts.$ui;
+  font-family: fonts.$special;
   font-weight: 400;
   padding: 1rem;
   height: 4rem;
