clean up old fonts

--- a/src/pages/[...blog].astro
+++ b/src/pages/[...blog].astro
@@ -4,8 +4,7 @@ import Layout from '../components/layout.astro';
 import '../sass/blog.scss';
 import '../sass/links.scss';
 import { MDLink } from '../components/links.tsx';
-import { ToDateString } from '../components/factories';
-import { components } from '../components/blog.tsx';
+import { components, ToDateString } from '../components/blog.tsx';
 import Comments from '../components/bluesky.tsx';
 
 export const prerender = true;
