--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,5 +1,5 @@
 // https://catppuccin.com/
-$background: #eff1f5;
+$background: #f7f6f2; // pantone 11-4101 TPG (stalactite)
 $background-alt: #e6e9ef;
 $background-light: #e6e9ef;
 $rosewater: #dc8a78;
